<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/register_mobile_number_label"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id_tv_sublabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/register_mobile_number_sublabel"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id_tv_family_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/setting_up_family_label"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id_tv_family_sublabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_up_family_sublabel"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id_tv_mobile_no_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/mobile_number_label"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/id_number_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/id_editTextCode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_tv_mobile_no_label">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/id_tv_country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="+91"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/id_editText_mobile"
            android:layout_width="332dp"
            android:layout_height="53dp"
            android:digits="0123456789"
            android:hint="@string/enter_mobile_number_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:textSize="15sp"
            android:textStyle="normal" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/id_editTextCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:digits="0123456789"
        android:hint="Enter verification code"
        android:maxLength="10" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id_one_time_pin_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/one_time_label"
        android:textSize="13sp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_button_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/proceed_btn_label"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_button_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/verify_btn_label"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_button_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/resend_btn_label"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="normal" />

</LinearLayout>